03-css/01-selectors.css
/* CSS custom properties / CSS variables */

:root {
  --darkmagenta: #8b008b;
  --magenta: #ff00ff;
  --royalblue: #4169e1;
  --teal: #008080;
  --violet: #9400d3;
}

/* Use attribute selectors for the first part of the exercise */

li[class="dog"],
li[class="hedgehog"] {
  color: var(--magenta);
}

li[id="cat"] {
  color: var(--teal);
}

li[class="parrot"] {
  color: var(--green);
}

li[class="donkey"],
li[class*="cat dog"] {
  color: var(--royalblue);
}

/* Use descendant, child, and sibling selectors for the second part */

ol > .first {
  color: var(--green);
}

.first ~ li {
  color: var(--magenta);
}

.second + li {
  color: var(--royalblue);
}

.list-cleaning li {
  color: var(--green);
}

